Packaging: Do not rely on macros but on command

--- a/packaging/rpm/ansible-builder.spec.j2
+++ b/packaging/rpm/ansible-builder.spec.j2
@@ -28,10 +28,10 @@ An Ansible execution environment builder
 %autosetup -n %{pypi_name}-%{version}
 
 %build
-%py3_build
+python3 setup.py build
 
 %install
-%py3_install
+python3 setup.py install -O1 --skip-build --root %{buildroot}
 
 %files
 %defattr(-,root,root)
